        o 'plot_results'    : 'main' argument is now (internally) passed to the 'plot_out' function.
        o 'plot_particles'  : 'main' argument is now omitted for the 3D dotty plots ('plot_NparOF' function), in order to avoid confusing (and sometimes
                              unnecessary) titles when 'main' is too long
        o 'lhoat'           : -) 'fn' argument now can be any R function or a character. In the latter case, it can be "hydromod" or the name of a 
                                  valid R function. In previous versions of 'lhoat' only a character type was accepted (Thanks to Rui Esteves !)
        o 'plot_NparOF'     : 'main' argument was disabled, in order to avoid confusing text when 'main is a long text

0.3-0	19-Dec-2012
        o 'hydroPSO'    : -) parallel capable (OS-independent)
                             * new argument 'parallel' to define how to parallelise the evaluation of the objective function
                             * new 'control' argument 'par.nnodes'  to define the number of cores/nodes to be used in a multi-core machine or 
                               network cluster
                             * new 'control' argument 'par.pkgs' (only needed for Windows machines) with the list of package that need to be 
                               loaded on each core/node 
                          -) Default number of particles for 'method=spso2007' was changed  from 'ceiling(10+2*sqrt(n))' to 'floor(10+2*sqrt(n))', following Clerc 2012

        o New vignette (14/Dec/2012)
                             
        o 'read_out'    : -) new argument 'nsim' used to specify the number of model outputs. It is useful when the model to be calibrated returns NA
                             instead of the simulated values for some particles (e.g., MODFLOW)
                           
        o 'read_results': -) See 'read_out' above

        o 'plot_results': -) See 'read_out' above
                      
                           